# autotrading

./: .env.example  .gitignore  CHANGES_SUMMARY.md  DAEMON_README.md  IMPLEMENTATION_SUMMARY.md  Makefile  README.md  TESTNET_FIX_NOTES.md  TESTNET_SETUP.md  pyproject.toml  requirements.txt  run.bat  run.sh  setup.bat  setup.sh  test_config_parsing.py  test_daemon_testnet.py  test_issue_reproduction.py  test_log.py  test_testnet_mode.py  validate_fix.sh
data/: trades.csv
scripts/: bot_daemon.py  position_tracker.py  signal_handler.py
src/trading_bot/: __main__.py  app.py  bot_daemon.py  bybit_clients.py  config.py  debug_app.py  logger.py  main.py
src/trading_bot/backtesting/: engine.py
src/trading_bot/data_feeds/: binance.py  binance_fetcher.py  bybit.py  bybit_fetcher.py  market_data_service.py  models.py  service.py  storage.py
src/trading_bot/execution/: bybit_client.py  service.py
src/trading_bot/risk/: service.py
src/trading_bot/scoring/: base.py  engine.py  service.py
src/trading_bot/scoring/components/: market_structure.py  multi_timeframe.py  orderbook.py  sentiment.py  technical.py
src/trading_bot/ui/: charting.py
src/trading_bot/utils/: atr.py  pnl.py
tests/: test_atr.py  test_backtest.py  test_backtest_source.py  test_bot_daemon.py  test_bybit_client.py  test_integration.py  test_market_data_service.py  test_pnl.py  test_risk_service.py  test_scoring_engine.py
tests/data_feeds/: test_binance.py  test_binance_fetcher.py  test_bybit.py  test_bybit_fetcher.py  test_storage.py
